Cleaned bit added device page and some link fix

--- a/enchilada.html
+++ b/enchilada.html
@@ -25,6 +25,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/fontawesome-all.css" rel="stylesheet">
+	<link href="css/font-awesome.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/swiper.css" rel="stylesheet">
 	<link href="css/magnific-popup.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -74,9 +76,9 @@
 
                 <!-- Dropdown Menu -->          
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="index.html#details" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DETAILS</a>
+                    <a class="nav-link dropdown-toggle page-scroll" href="index.html#download" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DOWNLOAD</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">TERMS CONDITIONS</span></a>
+                        <a class="dropdown-item" href="raphael.html"><span class="item-text">RAPHAEL</span></a>
                         <div class="dropdown-items-divide-hr"></div>
                         <a class="dropdown-item" href="enchilada.html"><span class="item-text">ENCHILADA</span></a>
                     </div>
@@ -111,7 +113,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Privacy Policy</h1>
+                    <h1>Enchilada</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -136,14 +138,21 @@
 
     <!-- Download -->
     <div id="download" class="basic-4">
-        <div class="container">
+        <center><div class="container">
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
-                    <div class="text-container">
-                        <h2>Download <span class="blue">Corvus OS</span></h2>
-                        <p class="p-large">Target the right customers for your business with the help of Leno's patented technology and increase conversion figures in less than 2 weeks</p>
-                        <a class="btn-solid-lg" href="https://sourceforge.net/projects/corvus-os/files/"><i class="fas fa-2x fa-download"></i>&nbsp; &nbsp;SOURCEfORGE</a>
-                        <!--<a class="btn-solid-lg" href="#your-link"><i class="fab fa-google-play"></i>PLAY STORE</a>-->
+                    <div class="text-container">						
+                        <h3><i class="fa fa-user"></i>&nbsp;DeadmanxXD<span class="blue"></span></h3>
+                        <p class="p-large">
+						<h5>Changelog<span class="blue">v4.7</span></h5>					
+							<li>Add missing aptX blob source header</li>
+							<li>Update to GCam_7.3.018_Urnyx05-v1.5</li>
+							<li>Add Tri-state UI overlays</li>									
+							<p></p>			
+						</p>						
+							<a class="btn-solid-reg" href="https://www.pling.com/p/1374627/"><i class="fa fa-2x fa-download"></i></a>
+                            <a class="btn-solid-reg" href="https://t.me/CorvusEnchilada"><i class="fa fa-2x fa-telegram"></i></a>
+							<a class="btn-solid-reg" href="https://forum.xda-developers.com/oneplus-6/development/rom-corvus-4-0-t4081269"><i class="fa fa-2x fa-globe"></i></a>							
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
@@ -152,7 +161,7 @@
                     </div> <!-- end of img-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
-        </div> <!-- end of container -->
+        </div> </center><!-- end of container -->
     </div> <!-- end of basic-4 -->
     <!-- end of download -->
 
