--- a/raphael.html
+++ b/raphael.html
@@ -111,7 +111,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Privacy Policy</h1>
+                    <h1>Enchilada</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -140,9 +140,16 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">
-                        <h2>Download <span class="blue">Corvus OS</span></h2>
-                        <p class="p-large">Target the right customers for your business with the help of Leno's patented technology and increase conversion figures in less than 2 weeks</p>
-                        <a class="btn-solid-lg" href="https://sourceforge.net/projects/corvus-os/files/"><i class="fas fa-2x fa-download"></i>&nbsp; &nbsp;SOURCEfORGE</a>
+                        <h2>Changelog <span class="blue">v4.7</span></h2>
+                        <p class="p-large">
+											<ul>
+												<li>Add missing aptX blob source header</li>
+												<li>Update to GCam_7.3.018_Urnyx05-v1.5</li>
+												<li>Add Tri-state UI overlays</li>
+												
+											</ul>
+						</p>
+                        <a class="btn-solid-lg" href="https://sourceforge.net/projects/corvus-os/files/"><i class="fas fa-2x fa-download"></i>&nbsp; &nbsp;DOWNLOAD</a>
                         <!--<a class="btn-solid-lg" href="#your-link"><i class="fab fa-google-play"></i>PLAY STORE</a>-->
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
