Bug fixes and added raphael download page

--- a/enchilada.html
+++ b/enchilada.html
@@ -77,10 +77,11 @@
                 <!-- Dropdown Menu -->          
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" href="index.html#download" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DOWNLOAD</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="raphael.html"><span class="item-text">RAPHAEL</span></a>
-                        <div class="dropdown-items-divide-hr"></div>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">                      
+                        
                         <a class="dropdown-item" href="enchilada.html"><span class="item-text">ENCHILADA</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="raphael.html"><span class="item-text">RAPHAEL</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -149,15 +150,15 @@
 							<li>Update to GCam_7.3.018_Urnyx05-v1.5</li>
 							<li>Add Tri-state UI overlays</li>									
 							<p></p>			
-						</p>						
-							<a class="btn-solid-reg" href="https://www.pling.com/p/1374627/"><i class="fa fa-2x fa-download"></i></a>
-                            <a class="btn-solid-reg" href="https://t.me/CorvusEnchilada"><i class="fa fa-2x fa-telegram"></i></a>
+						</p>	<br>					
+							<a class="btn-solid-reg" href="https://www.pling.com/p/1374627/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
+                            <a class="btn-solid-reg" href="https://t.me/CorvusEnchilada"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
 							<a class="btn-solid-reg" href="https://forum.xda-developers.com/oneplus-6/development/rom-corvus-4-0-t4081269"><i class="fa fa-2x fa-globe"></i></a>							
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/download.png" alt="alternative">
+                        <img class="img-fluid" src="images/enchilada.png" alt="alternative">
                     </div> <!-- end of img-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
