--- a/raphael.html
+++ b/raphael.html
@@ -25,6 +25,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:600,700" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/fontawesome-all.css" rel="stylesheet">
+	<link href="css/font-awesome.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/swiper.css" rel="stylesheet">
 	<link href="css/magnific-popup.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -74,11 +76,12 @@
 
                 <!-- Dropdown Menu -->          
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="index.html#details" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DETAILS</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">TERMS CONDITIONS</span></a>
-                        <div class="dropdown-items-divide-hr"></div>
+                    <a class="nav-link dropdown-toggle page-scroll" href="index.html#download" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DOWNLOAD</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">                      
+                        
                         <a class="dropdown-item" href="enchilada.html"><span class="item-text">ENCHILADA</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="raphael.html"><span class="item-text">RAPHAEL</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -111,7 +114,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Enchilada</h1>
+                    <h1>RAPHAEL</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -125,7 +128,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Enchilada</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Raphael</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -136,30 +139,37 @@
 
     <!-- Download -->
     <div id="download" class="basic-4">
-        <div class="container">
+        <center><div class="container">
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
-                    <div class="text-container">
-                        <h2>Changelog <span class="blue">v4.7</span></h2>
+                    <div class="text-container">						
+                        <h3><i class="fa fa-user"></i>&nbsp;Ritzz<span class="blue"></span></h3>
                         <p class="p-large">
-											<ul>
-												<li>Add missing aptX blob source header</li>
-												<li>Update to GCam_7.3.018_Urnyx05-v1.5</li>
-												<li>Add Tri-state UI overlays</li>
-												
-											</ul>
-						</p>
-                        <a class="btn-solid-lg" href="https://sourceforge.net/projects/corvus-os/files/"><i class="fas fa-2x fa-download"></i>&nbsp; &nbsp;DOWNLOAD</a>
-                        <!--<a class="btn-solid-lg" href="#your-link"><i class="fab fa-google-play"></i>PLAY STORE</a>-->
+						<h5>Changelog<span class="blue">v4.7</span></h5>					
+							<li>Set default thermal mode to evaluation</li>
+							<li>Updated GPS hal to LA.UM.8.1.r1-14700-sm8150.0</li>
+							<li>Update ADSP, CDSP & Perf blobs </li>									
+							<li>Added parameters for Hotspot 2.0</li>
+							<li>Removed OMX.qcom.video.decoder.vp9.secure configs</li>
+							<li>Disabled proximity usage during doze</li>
+							<li>Removed qcom.decoder.avc.secure</li>
+							<li>Added wfdhdcp hal interface</li>
+							<li>Added missing bluetooth overlays</li>
+							<li>Fixed HDR playback</li>
+							<p></p>			
+						</p>	<br>					
+							<a class="btn-solid-reg" href="https://www.pling.com/p/1371991"><i class="fa fa-2x fa-download"></i></a>&nbsp;
+                            <a class="btn-solid-reg" href="https://t.me/CorvusRaphael"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
+							<a class="btn-solid-reg" href="https://forum.xda-developers.com/showpost.php?p=82344481&postcount=76"><i class="fa fa-2x fa-globe"></i></a>							
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/download.png" alt="alternative">
+                        <img class="img-fluid" src="images/raphael.png" alt="alternative">
                     </div> <!-- end of img-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
-        </div> <!-- end of container -->
+        </div> </center><!-- end of container -->
     </div> <!-- end of basic-4 -->
     <!-- end of download -->
 
