Add more devices

--- a/enchilada.html
+++ b/enchilada.html
@@ -82,6 +82,18 @@
                         <a class="dropdown-item" href="enchilada.html"><span class="item-text">ENCHILADA</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="raphael.html"><span class="item-text">RAPHAEL</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="twolip.html"><span class="item-text">TWOLIP</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="tissot.html"><span class="item-text">TISSOT</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="beryllium.html"><span class="item-text">BERYLLIUM</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="platina.html"><span class="item-text">PLATINA</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="violet.html"><span class="item-text">VIOLET</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="whyred.html"><span class="item-text">WHYRED</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
