--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
                         <a class="dropdown-item" href="enchilada.html"><span class="item-text">ENCHILADA</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="raphael.html"><span class="item-text">RAPHAEL</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="twolip.html"><span class="item-text">TWOLIP</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="tissot.html"><span class="item-text">TISSOT</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="beryllium.html"><span class="item-text">BERYLLIUM</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="platina.html"><span class="item-text">PLATINA</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="violet.html"><span class="item-text">VIOLET</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="whyred.html"><span class="item-text">WHYRED</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -640,15 +652,15 @@
                     <div id="counter">
                         <div class="cell">
                             <div class="counter-value number-count" data-count="14">1</div>
-                            <p class="counter-info">Offcial Supported Devices</p>
+                            <p class="counter-info">+ Offcial Devices</p>
                         </div>
                         <div class="cell">
-                            <div class="counter-value number-count" data-count="899">1</div>
-                            <p class="counter-info">Number of Downloads</p>
+                            <div class="counter-value number-count" data-count="21593">1</div>
+                            <p class="counter-info">+ Downloads</p>
                         </div>
                         <div class="cell">
-                            <div class="counter-value number-count" data-count="2158">1</div>
-                            <p class="counter-info">Community Members</p>
+                            <div class="counter-value number-count" data-count="2390">1</div>
+                            <p class="counter-info">+ Members</p>
                         </div>
                         
                     </div>
