--- a/beryllium.html
+++ b/beryllium.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Raphael - Corvus OS - Downloads for Raphael</title>
+    <title>Beryllium - Corvus OS - Downloads for Beryllium</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -126,7 +126,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>RAPHAEL</h1>
+                    <h1>BERYLLIUM</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -140,7 +140,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Raphael</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Beryllium</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -155,29 +155,38 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
-                        <h3><i class="fa fa-user"></i>&nbsp;Ritzz<span class="blue"></span></h3>
+                        <h3><i class="fa fa-user"></i>&nbsp;Saikiran<span class="blue"></span></h3>
                         <p class="p-large">
-						<h5>Changelog<span class="blue">v4.7</span></h5>					
-							<li>Set default thermal mode to evaluation</li>
-							<li>Updated GPS hal to LA.UM.8.1.r1-14700-sm8150.0</li>
-							<li>Update ADSP, CDSP & Perf blobs </li>									
-							<li>Added parameters for Hotspot 2.0</li>
-							<li>Removed OMX.qcom.video.decoder.vp9.secure configs</li>
-							<li>Disabled proximity usage during doze</li>
-							<li>Removed qcom.decoder.avc.secure</li>
-							<li>Added wfdhdcp hal interface</li>
-							<li>Added missing bluetooth overlays</li>
-							<li>Fixed HDR playback</li>
+						<h5>Changelog<span class="blue">v4.7</span></h5>												
+								<li>Switched to liberfmgr (new powerhal)</li>
+								<li>Use Vulkan for Ui renderer by default</li>
+								<li>Added miui (Anx) camera as prebuilt</li>
+								<li>Added back dirac</li>
+								<li>Dirac stability improvements</li>
+								<li>Added qs tile for dirac</li>
+								<li>Added runtime blkio settings</li>
+								<li>Removed redudant CHRE daemon</li>
+								<li>mirror IRQ tuning from Razer Phone 2</li>
+								<li>Improved thermals further more</li>
+								<li>Updated notch paddings</li>
+								<li>Improved zram performance</li>
+								<li>zram size is 50% of total ram</li>
+								<li>Set evaluation thermal mode as default</li>
+								<li>wifi: smarter decisions on whether to use a 2- or 5Ghz AP</li>
+								<li>wifi: Disable RX wakelock feature</li>
+								<li>Addressed some selinux denials</li>
+								<li>Fixed some logspams</li>
+								<li>Some more misc improvements</li>
 							<p></p>			
 						</p>	<br>					
-							<a class="btn-solid-reg" href="https://www.pling.com/p/1371991"><i class="fa fa-2x fa-download"></i></a>&nbsp;
-                            <a class="btn-solid-reg" href="https://t.me/CorvusRaphael"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
-							<a class="btn-solid-reg" href="https://forum.xda-developers.com/showpost.php?p=82344481&postcount=76"><i class="fa fa-2x fa-globe"></i></a>							
+							<a class="btn-solid-reg" href="https://www.pling.com/p/1372060/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
+                            <a class="btn-solid-reg" href="https://t.me/corvusberyllium"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
+							<a class="btn-solid-reg" href="https://forum.xda-developers.com/poco-f1/development/rom-corvus-rom-t4073433"><i class="fa fa-2x fa-globe"></i></a>							
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/raphael.png" alt="alternative">
+                        <img class="img-fluid" src="images/beryllium.png" alt="alternative">
                     </div> <!-- end of img-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
