--- a/raphael.html
+++ b/raphael.html
@@ -94,6 +94,12 @@
 						<a class="dropdown-item" href="violet.html"><span class="item-text">VIOLET</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="whyred.html"><span class="item-text">WHYRED</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="x00t.html"><span class="item-text">X00T</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="willow.html"><span class="item-text">WILLOW</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="ysl.html"><span class="item-text">YSL</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
