--- a/x00t.html
+++ b/x00t.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Violet - Corvus OS - Downloads for Violet</title>
+    <title>x00t - Corvus OS - Downloads for x00t</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>VIOLET</h1>
+                    <h1>X00T</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -146,7 +146,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Violet</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>x00t</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -161,21 +161,26 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
-                        <h3><i class="fa fa-user"></i>&nbsp;ShivamKumar2002<span class="blue"></span></h3>
+                        <h3><i class="fa fa-user"></i>&nbsp;JulianSurya<span class="blue"></span></h3>
                         <p class="p-large">
-						<h5>Changelog<span class="blue">v4.7</span></h5>												
-								<li>Updated kernel to 4.4.220</li>
-								
+						<h5>Changelog<span class="blue">v4.7</span></h5>																		
+							<li>Fixed mic issue</li>
+							<li>Fixed screen recording lag</li>
+							<li>Fixed Wifi & Hotspot issue</li>
+							<li>Bring back zenmotions</li>
+							<li>Upstreamed kernel to LA.UM.8.2.r1-06500-sdm660.0</li>
+							<li>Rework memory configuration</li>
+							<li>Some misc optimization</li>								
 							<p></p>			
 						</p>	<br>					
-							<a class="btn-solid-reg" href="https://www.pling.com/p/1372063/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
-                            <a class="btn-solid-reg" href="https://t.me/CorvusViolet"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
-							<a class="btn-solid-reg" href="https://forum.xda-developers.com/redmi-note-7-pro/development/rom-corvus-os-v3-5-t4074793"><i class="fa fa-2x fa-globe"></i></a>							
+							<a class="btn-solid-reg" href="https://www.pling.com/p/1374518/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
+                            <a class="btn-solid-reg" href="https://t.me/CorvusX00T"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
+							<a class="btn-solid-reg" href="https://forum.xda-developers.com/asus-zenfone-max-pro-m1/development/rom-corvus-os-v4-0-juliansurya-t4081283"><i class="fa fa-2x fa-globe"></i></a>							
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/violet.png" alt="alternative">
+                        <img class="img-fluid" src="images/x00t.png" alt="alternative">
                     </div> <!-- end of img-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
