--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                     <h2>CONTACT</h2>
                     <ul class="list-unstyled li-space-lg">                        
                         <li><i class="fab fa-telegram"></i><a class="blue" href="https://t.me/corvussupport">Support Group</a></li>                        
-                        <li><i class="fas fa-envelope"></i><a class="blue" href="oscorvus@gmail.com">Email us</a></li>
+                        <li><i class="fas fa-envelope"></i><a class="blue" href="mailto:oscorvus@gmail.com">Email us</a></li>
                     </ul>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
