--- a/x00t.html
+++ b/x00t.html
@@ -97,9 +97,13 @@
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="x00t.html"><span class="item-text">X00T</span></a>
 						<div class="dropdown-items-divide-hr"></div>
-						<a class="dropdown-item" href="willow.html"><span class="item-text">WILLOW</span></a>
+						<a class="dropdown-item" href="ginkgo.html"><span class="item-text">GINKGO</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="ysl.html"><span class="item-text">YSL</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="mido.html"><span class="item-text">MIDO</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="lavender.html"><span class="item-text">LAVENDER</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
