updated test alignment

--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                 <div class="col-lg-6">
                     <div class="text-container">
                         <h3>Donate Us </h3>
-                        <p>We the team behind Corvus OS put our valuable time and energy to bring you a OS of great calibre with regular updates and security patches. Please share some love and support to the Team by making a contribution so we can continue to improve the software experience of your device Love ❤️ - Corvus Team </p>
+                        <p>We the team behind Corvus OS put our valuable time and energy to bring you a OS of great calibre with regular updates and security patches. Please share some love and support to the Team by making a contribution so we can continue to improve the software experience of your device.</p>
                         <a class="btn-solid-lg page-scroll" href="http://paypal.me/ritzz97"><i class="fab fa-paypal"></i>PayPal</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
