Violet: Update ChangeLog

--- a/violet.html
+++ b/violet.html
@@ -168,7 +168,14 @@
                         <h3><i class="fa fa-user"></i>&nbsp;ShivamKumar2002<span class="blue"></span></h3>
                         <p class="p-large">
 						<h5>Changelog<span class="blue">v4.7</span></h5>												
-								<li>Updated kernel to 4.4.220</li>
+								<li>Enforcing Build</li>
+								<li>Updated Libinit</li>
+								<li>Addressed Denials</li>
+								<li>Source and Kernel Upstream</li>
+								<li>Allow Legacy App Scaling</li>
+								<li>Fixed Notch Bug</li>
+								<li>Use Vulkan for UI Rendering</li>
+								<li>Some Cleanup And Miscellaneous Fixes</li>
 								
 							<p></p>			
 						</p>	<br>					
