--- a/enchilada.html
+++ b/enchilada.html
@@ -166,13 +166,10 @@
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
                         <h3><i class="fa fa-user"></i>&nbsp;DeadmanxXD<span class="blue"></span></h3>
-                        <p class="p-large">
-						<h5>Changelog<span class="blue">v4.7</span></h5>					
-							<li>Add missing aptX blob source header</li>
-							<li>Update to GCam_7.3.018_Urnyx05-v1.5</li>
-							<li>Add Tri-state UI overlays</li>									
+                        <p class="p-large">																		
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/enchilada.html"></iframe>
 							<p></p>			
-						</p>	<br>					
+						</p>						
 							<a class="btn-solid-reg" href="https://www.pling.com/p/1374627/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
                             <a class="btn-solid-reg" href="https://t.me/CorvusEnchilada"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
 							<a class="btn-solid-reg" href="https://forum.xda-developers.com/oneplus-6/development/rom-corvus-4-0-t4081269"><i class="fa fa-2x fa-globe"></i></a>							
