--- a/tissot.html
+++ b/tissot.html
@@ -168,9 +168,9 @@
                         <h3><i class="fa fa-user"></i>&nbsp;Takeshiro<span class="blue"></span></h3>
                         <p class="p-large">
 						<h5>Changelog<span class="blue">v4.7</span></h5>												
-								<li>Initial Official Release</li>
-								<li>Kernel Upstream to 4.9.221</li>
-								<li>Revert kernel name from 'hentai' to 'perf'</li>
+								<li>Changed Kernel from 'perf' to 'Strix'</li>
+								<li>Kernel Upstream to 4.9.222</li>
+								<li>Fixed Boot Animation</li>
 							<p></p>			
 						</p>	<br>					
 							<a class="btn-solid-reg" href="https://www.pling.com/p/1381613/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
