added 2 missing devices adopt changelog from external

--- a/lavender.html
+++ b/lavender.html
@@ -104,6 +104,10 @@
 						<a class="dropdown-item" href="mido.html"><span class="item-text">MIDO</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="lavender.html"><span class="item-text">LAVENDER</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="wayne.html"><span class="item-text">WAYNE</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="land.html"><span class="item-text">LAND</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -166,21 +170,10 @@
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
                         <h3><i class="fa fa-user"></i>&nbsp;Genkzsz11<span class="blue"></span></h3>
-                        <p class="p-large">
-						<h5>Changelog<span class="blue">v4.7</span></h5>																		
-							<li>Back to Pixel Charging Animation</li>
-							<li>Address more denials on boot</li>
-							<li>Add blkio tune from tissot</li>
-							<li>Add CPU temperature in cpu info qs title</li>
-							<li>Fixed SmartCharging</li>
-							<li>Fixed Lag Screenrecording </li>
-							<li>Enable ro.telephony.use_old_mnc_mcc_format</li>
-							<li>Update Graphics/Vulkan from daisy_sprout:10-QKQ1.191002.002</li>
-							<li>Update qti-telephony-common from deen_sprout:10-QPK30.54</li>
-							
-												
+                        <p class="p-large">																		
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/lavender.html"></iframe>
 							<p></p>			
-						</p>	<br>					
+						</p>					
 							<a class="btn-solid-reg" href="http://bit.ly/CendolDurian"><i class="fa fa-2x fa-download"></i></a>&nbsp;
                             <a class="btn-solid-reg" href="https://t.me/CorvusLavender"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
 							<a class="btn-solid-reg" href="https://forum.xda-developers.com/redmi-note-7/development/rom-corvus-os-v3-5-t4075885"><i class="fa fa-2x fa-globe"></i></a>							
