--- a/tissot.html
+++ b/tissot.html
@@ -104,6 +104,10 @@
 						<a class="dropdown-item" href="mido.html"><span class="item-text">MIDO</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="lavender.html"><span class="item-text">LAVENDER</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="wayne.html"><span class="item-text">WAYNE</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="land.html"><span class="item-text">LAND</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -166,13 +170,10 @@
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
                         <h3><i class="fa fa-user"></i>&nbsp;Takeshiro<span class="blue"></span></h3>
-                        <p class="p-large">
-						<h5>Changelog<span class="blue">v4.7</span></h5>												
-								<li>Initial Official Release</li>
-								<li>Kernel Upstream to 4.9.221</li>
-								<li>Revert kernel name from 'hentai' to 'perf'</li>
+                        <p class="p-large">																		
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/tissot.html"></iframe>
 							<p></p>			
-						</p>	<br>					
+						</p>				
 							<a class="btn-solid-reg" href="https://www.pling.com/p/1381613/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
                             <a class="btn-solid-reg" href="https://t.me/corvustissot"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
 							<a class="btn-solid-reg" href="https://forum.xda-developers.com/mi-a1/development/official-corvus-os-v4-7-t4095725"><i class="fa fa-2x fa-globe"></i></a>							
