--- a/beryllium.html
+++ b/beryllium.html
@@ -104,6 +104,10 @@
 						<a class="dropdown-item" href="mido.html"><span class="item-text">MIDO</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="lavender.html"><span class="item-text">LAVENDER</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="wayne.html"><span class="item-text">WAYNE</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="land.html"><span class="item-text">LAND</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -166,29 +170,10 @@
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
                         <h3><i class="fa fa-user"></i>&nbsp;Saikiran<span class="blue"></span></h3>
-                        <p class="p-large">
-						<h5>Changelog<span class="blue">v4.7</span></h5>												
-								<li>Switched to liberfmgr (new powerhal)</li>
-								<li>Use Vulkan for Ui renderer by default</li>
-								<li>Added miui (Anx) camera as prebuilt</li>
-								<li>Added back dirac</li>
-								<li>Dirac stability improvements</li>
-								<li>Added qs tile for dirac</li>
-								<li>Added runtime blkio settings</li>
-								<li>Removed redudant CHRE daemon</li>
-								<li>mirror IRQ tuning from Razer Phone 2</li>
-								<li>Improved thermals further more</li>
-								<li>Updated notch paddings</li>
-								<li>Improved zram performance</li>
-								<li>zram size is 50% of total ram</li>
-								<li>Set evaluation thermal mode as default</li>
-								<li>wifi: smarter decisions on whether to use a 2- or 5Ghz AP</li>
-								<li>wifi: Disable RX wakelock feature</li>
-								<li>Addressed some selinux denials</li>
-								<li>Fixed some logspams</li>
-								<li>Some more misc improvements</li>
+                        <p class="p-large">																		
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/beryllium.html"></iframe>
 							<p></p>			
-						</p>	<br>					
+						</p>					
 							<a class="btn-solid-reg" href="https://www.pling.com/p/1372060/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
                             <a class="btn-solid-reg" href="https://t.me/corvusberyllium"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
 							<a class="btn-solid-reg" href="https://forum.xda-developers.com/poco-f1/development/rom-corvus-rom-t4073433"><i class="fa fa-2x fa-globe"></i></a>							
