--- a/enchilada.html
+++ b/enchilada.html
@@ -104,6 +104,10 @@
 						<a class="dropdown-item" href="mido.html"><span class="item-text">MIDO</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="lavender.html"><span class="item-text">LAVENDER</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="wayne.html"><span class="item-text">WAYNE</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="land.html"><span class="item-text">LAND</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
