--- a/raphael.html
+++ b/raphael.html
@@ -104,6 +104,10 @@
 						<a class="dropdown-item" href="mido.html"><span class="item-text">MIDO</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="lavender.html"><span class="item-text">LAVENDER</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="wayne.html"><span class="item-text">WAYNE</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="land.html"><span class="item-text">LAND</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -166,20 +170,10 @@
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
                         <h3><i class="fa fa-user"></i>&nbsp;Ritzz<span class="blue"></span></h3>
-                        <p class="p-large">
-						<h5>Changelog<span class="blue">v4.7</span></h5>					
-							<li>Set default thermal mode to evaluation</li>
-							<li>Updated GPS hal to LA.UM.8.1.r1-14700-sm8150.0</li>
-							<li>Update ADSP, CDSP & Perf blobs </li>									
-							<li>Added parameters for Hotspot 2.0</li>
-							<li>Removed OMX.qcom.video.decoder.vp9.secure configs</li>
-							<li>Disabled proximity usage during doze</li>
-							<li>Removed qcom.decoder.avc.secure</li>
-							<li>Added wfdhdcp hal interface</li>
-							<li>Added missing bluetooth overlays</li>
-							<li>Fixed HDR playback</li>
+                        <p class="p-large">																		
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/raphael.html"></iframe>
 							<p></p>			
-						</p>	<br>					
+						</p>				
 							<a class="btn-solid-reg" href="https://www.pling.com/p/1371991"><i class="fa fa-2x fa-download"></i></a>&nbsp;
                             <a class="btn-solid-reg" href="https://t.me/CorvusRaphael"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
 							<a class="btn-solid-reg" href="https://forum.xda-developers.com/showpost.php?p=82344481&postcount=76"><i class="fa fa-2x fa-globe"></i></a>							
