--- a/twolip.html
+++ b/twolip.html
@@ -104,6 +104,10 @@
 						<a class="dropdown-item" href="mido.html"><span class="item-text">MIDO</span></a>
 						<div class="dropdown-items-divide-hr"></div>
 						<a class="dropdown-item" href="lavender.html"><span class="item-text">LAVENDER</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="wayne.html"><span class="item-text">WAYNE</span></a>
+						<div class="dropdown-items-divide-hr"></div>
+						<a class="dropdown-item" href="land.html"><span class="item-text">LAND</span></a>
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -166,15 +170,10 @@
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
                         <h3><i class="fa fa-user"></i>&nbsp;OGHyperion<span class="blue"></span></h3>
-                        <p class="p-large">
-						<h5>Changelog<span class="blue">v4.5</span></h5>												
-								<li>Upstreamed SuperHyperionKernel to 4.4.219</li>
-								<li>Fixed SmartCharging</li>
-								<li>Updated Power Profile From Stock MIUI</li>
-								<li>Add Speaker Gain Combo (from RN7)</li>
-								<li>Add hph-lowpower-mode for audio (also from RN7)</li>
+                        <p class="p-large">																		
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/twolip.html"></iframe>
 							<p></p>			
-						</p>	<br>					
+						</p>				
 							<a class="btn-solid-reg" href="https://www.pling.com/p/1372053/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
                             <a class="btn-solid-reg" href="https://t.me/CorvusTulip"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
 							<a class="btn-solid-reg" href="https://forum.xda-developers.com/showpost.php?p=82338673&postcount=29"><i class="fa fa-2x fa-globe"></i></a>							
