--- a/jasmine_sprout.html
+++ b/jasmine_sprout.html
@@ -18,7 +18,7 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Tissot - Corvus OS - Downloads for Tissot</title>
+    <title>Jasmine sprout - Corvus OS - Downloads for jasmine sprout</title>
     
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>TISSOT</h1>
+                    <h1>JASMINE SPROUT</h1>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -156,7 +156,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumbs">
-                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Tissot</span>
+                        <a href="index.html">Home</a><i class="fa fa-angle-double-right"></i><span>Jasmine_sprout</span>
                     </div> <!-- end of breadcrumbs -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -171,19 +171,19 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">						
-                        <h3><i class="fa fa-user"></i>&nbsp;Takeshiro<span class="blue"></span></h3>
+                        <h3><i class="fa fa-user"></i>&nbsp;JeanGraff30<span class="blue"></span></h3>
                         <p class="p-large">																		
-							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/tissot.html"></iframe>
+							<iframe  class="blue" height="190" scrolling="yes" style="overflow:hidden; border:none; border-radius: 4px; "  src="https://corvus-devices.github.io/jasmine_sprout.html"></iframe>
 							<p></p>			
-						</p>				
-							<a class="btn-solid-reg" href="https://www.pling.com/p/1381613/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
-                            <a class="btn-solid-reg" href="https://t.me/corvustissot"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
-							<a class="btn-solid-reg" href="https://forum.xda-developers.com/mi-a1/development/official-corvus-os-v4-7-t4095725"><i class="fa fa-2x fa-globe"></i></a>							
+						</p>			
+							<a class="btn-solid-reg" href="https://www.pling.com/p/1379272/"><i class="fa fa-2x fa-download"></i></a>&nbsp;
+                            <a class="btn-solid-reg" href="https://t.me/CorvusJasmineWayne"><i class="fa fa-2x fa-telegram"></i></a>&nbsp;
+							<a class="btn-solid-reg" href="https://forum.xda-developers.com/mi-a2/development/rom-corvus-os-mi-a2-jasminesprout-t4090199"><i class="fa fa-2x fa-globe"></i></a>							
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/tissot.png" alt="alternative">
+                        <img class="img-fluid" src="images/jasmine_sprout.png" alt="alternative">
                     </div> <!-- end of img-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
