Fix small derp!

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="col-lg-6">
                         <div class="text-container">
                             <h2>Corvus OS<br><span id="js-rotating">FEATURES, SPEEDY, SMOOTHNESS</span></h2>
-                            <p class="p-large">First, it's inspired by Dirty Unicorns (thanks to Alex Cruz), but then we picked many other features too. Our objective is stability while being feature-rich at the same time. We won't belive that Corvus is better ROM than others, but we will always try to give you the best.</p>
+                            <p class="p-large">First, it's inspired by Dirty Unicorns (thanks to Alex Cruz), but then we picked many other features too. Our objective is stability while being feature-rich at the same time. We won't believe that Corvus is better ROM than others, but we will always try to give you the best.</p>
                             <a class="btn-solid-lg page-scroll" href="https://github.com/Corvus-ROM"><i class="fab fa-github"></i>Github</a>
                             <a class="btn-solid-lg popup-with-move-anim" href="#details-lightbox-1"><i class="fas fa-bullhorn"></i>What's new</a>
                         </div>
