--- a/index.html
+++ b/index.html
@@ -254,17 +254,19 @@
 			<div class="col-lg-6">
 				<h3>Corvus OS</h3>
 				<hr>             
-				<h4>ROM Changelog v5.0</h4>				
+				<h4>ROM Changelog v5.5</h4>				
 				<table>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>May security patch</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Force Expanded Notifications</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added color modes for edge lighting</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added pulse edge light for all doze triggers</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Percentage inside battery icon</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Synced battery icon in settings with status bar</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improvements art & bionic</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Disabled R-style headers by default</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Other fixes and improvements</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added 2 system themes Dark grey & Material ocean</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Switch style</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Power off QS Tile</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added new Bottom Navbar animation in Raven's Lair</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added reset for QS themes & switch style</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed setting lockscreen charging animation on boot</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improvements in Launcher Themes</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improvements in AOSP keyboard</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Removed pixel navigation bar</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Removed force expanded notifications feature</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Screenshot Delays</td></tr>
 				</table>
 				<a class="btn-solid-reg1" href="https://t.me/CorvusUpdates">Update Channel</a> <a class="btn-outline-reg mfp-close as-button" href="#home">BACK</a> 
 			</div>
