Update the copy rights

--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Copyright © Corvus - Custom Rom for Android</p>
+                    <p class="p-small">Copyright ©2020 Corvus Rom. All Rights Reserved.</p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
