Update changelogs for 6.5

--- a/index.html
+++ b/index.html
@@ -256,18 +256,23 @@
 			<div class="col-lg-6">
 				<h3>Corvus OS</h3>
 				<hr>             
-				<h4>ROM Changelog v6.0</h4>				
+				<h4>ROM Changelog v6.5</h4>				
 				<table>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>June security patch</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added hotspot setting to allow VPN upstreams</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added volume steps</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added back RGB accents</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added some more lockstyles</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added Clear theme</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added support for pressed fod layer</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed google sans not applying</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Face Unlock Returns for Official Devices</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed wake on plug</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed notification LED blink for missed calls</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed volume panel not changing on material ocean theme</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed BT icon in Statusbar</td></tr>
 					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improvements in QS data usage</td></tr>
-					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Fixed Call Recording in Stock Dialer</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Enabled default lockscreen shortcuts</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improved art stuff</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Improved alert slider dialog</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Clean up Network traffic Indicator</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Zygote art improvments</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Removed QS themes</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Moved ticker to notification fragment</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Added some new FOD animations</td></tr>
+					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>FODCircleView: Improved position update for icons</td></tr>
 					<tr><td class="icon-cell"><i class="fas fa-code"></i></td><td>Other fixes and improvements</td></tr>
 				</table>
 				<a class="btn-solid-reg1" href="https://t.me/CorvusUpdates">Update Channel</a> <a class="btn-outline-reg mfp-close as-button" href="#home">BACK</a> 
